Problema de padding resolvido

--- a/Estilos/style.css
+++ b/Estilos/style.css
@@ -39,19 +39,19 @@ header{
 header>h1{
     color: white;
     font-family: var(--fonte-destaque);
-    font-size: 3em;
+    font-size: 4em;
     margin-bottom: 20px;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.474);
 }
 header>p{
     color: white;
     font-family: var(--fonte-padrao);
-    font-size: 1.2em;
+    font-size: 1.5em;
     padding-left: 10px;
     padding-right: 10px;
     max-width: 600px;
     margin: auto;
-    margin-bottom: 20px;
+    padding-bottom: 50px;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.474);
 }
 nav{
