Erro de padding resolvido v2

--- a/Estilos/style.css
+++ b/Estilos/style.css
@@ -30,23 +30,25 @@ a.externo::after{
     content: '\00A0\1F517';
 }
 header{
-    background-color: var(--cor4);
+    background-image: linear-gradient(to bottom,var(--cor3),var(--cor5));
     min-height: 150px;
     text-align: center;
-    padding-top: 30px;background-image: linear-gradient(to bottom,var(--cor3),var(--cor5));
+    padding-top:40px
 
 }
 header>h1{
     color: white;
     font-family: var(--fonte-destaque);
     font-size: 4em;
+    font-weight: normal;
     margin-bottom: 20px;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.474);
+  
 }
 header>p{
     color: white;
     font-family: var(--fonte-padrao);
-    font-size: 1.5em;
+    font-size: 1.2em;
     padding-left: 10px;
     padding-right: 10px;
     max-width: 600px;
